# LacunaGE

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  asset_watchdog.py
assets/: CMakeLists.txt  cube.ogex  nanosuit.rar
assets/sponza/: spnza_bricks_a_diff.dds  sponza.mtl  sponza_arch.mtl
blenderEditor/: LacunaEditor.py  editor.blend
src/: CMakeLists.txt
src/LacunaCore/: CMakeLists.txt
src/LacunaCore/includes/game_objects/: Camera.h  Entity.h  Transform.h
src/LacunaCore/includes/game_objects/Components/: AudioSourceComponent.h  MeshComponent.h  Transform.h
src/LacunaCore/includes/resources/: ResourceManager.h  SceneResource.h
src/LacunaCore/includes/system/: EntityFactory.h  InputHelpers.h  InputSystem.h  StateSystem.h
src/LacunaCore/interfaces/game_objects/: Component.h  Entity.h
src/LacunaCore/interfaces/graphics/: Renderer.h
src/LacunaCore/interfaces/resources/: Device.h  Material.h  Shader.h  Vertex.h
src/LacunaCore/source/: main.cpp
src/LacunaCore/source/game_objects/: Camera.cpp  Entity.cpp  Transform.cpp
src/LacunaCore/source/game_objects/Components/: MeshComponent.cpp  Transform.cpp
src/LacunaCore/source/resources/: Material.cpp  ResourceManager.cpp  SceneResource.cpp  Shader.cpp
src/LacunaCore/source/system/: EntityFactory.cpp  InputSystem.cpp  StateSystem.cpp
src/LacunaDX12/: CMakeLists.txt
src/LacunaDX12/include/: DX12Device.h  DX12Shader.h  LacunaDX12Renderer.h
src/LacunaDX12/source/: DX12Helpers.h  LacunaDX12Renderer.cpp
src/LacunaDX12/source/wrappers/: DX12Device.cpp  DX12Shaders.cpp
src/LacunaDX12Shaders/: CMakeLists.txt
src/LacunaDX12Shaders/build-in/: shaders.hlsl
src/LacunaPlatform/: CMakeLists.txt
src/LacunaPlatform/include/: LacunaPlatform.h  LacunaWincodes.h  LacunaWindow.h
src/LacunaPlatform/source/: LacunaPlatform.cpp  LacunaWindow.cpp
src/LacunaPlatform/source/Windows/: WIN32_Window.cpp  WIN32_Window.h
src/LacunaVulkan/: CMakeLists.txt
src/LacunaVulkan/include/: LacunaVRenderer.h
src/LacunaVulkan/source/: LacunaVRenderer.cpp  VulkanHelpers.cpp  VulkanHelpers.h
